paid/force-app/main/default/objects/PricebookEntry/fields/PAID_Product_External_ID__c.field-meta.xml
<CustomField>
    <fullName>PAID_Product_External_ID__c</fullName>
    <formula>Product2.PAID_ProductExternalID__c</formula>
    <label>PAID Product External ID</label>
    <type>Text</type>
</CustomField>