paid/force-app/main/default/objects/PricebookEntry/fields/PAID_Product_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>PAID_Product_Update_Status__c</fullName>
    <formula>TEXT(Product2.PAID_Product_Update_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAID Product Update Status</label>
    <type>Text</type>
</CustomField>